Preventing IgniteHeartbeat race condition on the start of IgniteService
Signed-off-by: Michael Dinzinger <michael.dinzinger@uni-passau.de>